Added copy step to deploy product details page as root

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,19 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Check dist content
+        run: ls -la dist/ || dir dist/  # List files in dist
       - name: Copy product details page to root
-        run: cp dist/product_pages/index.html dist/index.html
+        run: |
+          if [ -f dist/product_pages/index.html ]; then
+            cp dist/product_pages/index.html dist/index.html
+            echo "Copied product_pages/index.html to index.html"
+          else
+            echo "Error: dist/product_pages/index.html not found"
+            exit 1
+          fi
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
-          token: ${{ secrets.ACCESS_TOKEN }} # This line is correct
+          token: ${{ secrets.ACCESS_TOKEN }}
