--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,10 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Copy to docs
-        run: xcopy dist\* docs /s /e /h /c /y || cp -r dist/* docs/
+      - name: Copy product details to root
+        run: cp dist/product_pages/index.html dist/index.html
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: docs
+          folder: dist
           token: ${{ secrets.ACCESS_TOKEN }}
