--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "vite": "^5.4.7"
+    "vite": "^7.1.7"
   },
   "babel": {
     "presets": [
@@ -32,5 +32,8 @@
     "last 3 opera versions",
     "last 3 ios_saf versions",
     "last 3 safari versions"
-  ]
+  ],
+  "dependencies": {
+    "@vitejs/plugin-legacy": "^7.2.1"
+  }
 }
